--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
 
   <div class="container max-w-lg mx-auto">
     <div class="row flex justify-center">
-      <div data-color="green" class="btn bg-green-600 m-3 inline-block h-32 w-32 md:h-48 md:w-48 border-[10px] border-black rounded-[20%] cursor-pointer transition-all duration-150"></div>
-      <div data-color="red" class="btn bg-red-600 m-3 inline-block h-32 w-32 md:h-48 md:w-48 border-[10px] border-black rounded-[20%] cursor-pointer transition-all duration-150"></div>
+      <div id ="green" class="btn bg-green-600 m-3 inline-block h-32 w-32 md:h-48 md:w-48 border-[10px] border-black rounded-[20%] cursor-pointer transition-all duration-150"></div>
+      <div id ="red" class="btn bg-red-600 m-3 inline-block h-32 w-32 md:h-48 md:w-48 border-[10px] border-black rounded-[20%] cursor-pointer transition-all duration-150"></div>
     </div>
     <div class="row flex justify-center">
-      <div data-color="yellow" class="btn bg-yellow-400 m-3 inline-block h-32 w-32 md:h-48 md:w-48 border-[10px] border-black rounded-[20%] cursor-pointer transition-all duration-150"></div>
-      <div data-color="blue" class="btn bg-blue-600 m-3 inline-block h-32 w-32 md:h-48 md:w-48 border-[10px] border-black rounded-[20%] cursor-pointer transition-all duration-150"></div>
+      <div id ="yellow" class="btn bg-yellow-400 m-3 inline-block h-32 w-32 md:h-48 md:w-48 border-[10px] border-black rounded-[20%] cursor-pointer transition-all duration-150"></div>
+      <div id ="blue" class="btn bg-blue-600 m-3 inline-block h-32 w-32 md:h-48 md:w-48 border-[10px] border-black rounded-[20%] cursor-pointer transition-all duration-150"></div>
     </div>
   </div>
 
